<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/table_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/background_color"
    tools:context=".EightPuzzle" >
    
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <Button 
        	android:id="@+id/button1"
        	android:text="@string/button1"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    	<Button 
        	android:id="@+id/button2"
        	android:text="@string/button2"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    	<Button 
        	android:id="@+id/button3"
        	android:text="@string/button3"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    </TableRow>
    
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    	<Button 
        	android:id="@+id/button8"
        	android:text="@string/button8"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    	<Button
    	    android:id="@+id/button0"
    	    android:text="@string/button0"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/background_color" />
    	<Button 
        	android:id="@+id/button4"
        	android:text="@string/button4"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    </TableRow>
    
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    	<Button 
        	android:id="@+id/button7"
        	android:text="@string/button7"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    	<Button 
        	android:id="@+id/button6"
        	android:text="@string/button6"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    	<Button 
        	android:id="@+id/button5"
        	android:text="@string/button5"
        	android:textSize="@dimen/button_text_size"
        	android:textColor="@color/button_text_color"
        	android:gravity="center"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_margin="@dimen/activity_button_margin"
        	android:background="@color/button_background_color" />
    </TableRow>

</TableLayout>
